# stoic-html

./: .coveragerc  .env.example  .gitignore  README.md  setup.cfg  setup.py
mysite/: settings.py
stoic-html/: __init__.py
stoic_html/: __init__.py
stoic_html/tests/: test_stoic_html.py
