[metadata]
name = stoic-html
description = Stoic HTML: A simple wrapper around Django's `format_html()`
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/stoic-html
author = Thomas Guettler
author_email = guettliml.stoic-html@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
include_package_data = true
packages = stoic_html
install_requires = \
    pytest-django
    pytest-mock
    Django

